Project

General

Profile

Actions

Bug #20423

closed

rgw: radosgw-admin data sync run crash

Added by shasha lu almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

steps to reproduce:
1、setup a multisite env with two zones in a zonegroup
2、put some buckets and objects in master zone
3、run "radosgw-admin data init" in slave zone
4、run "radosgw-admin data run" in slave zone will crash
  • Caught signal (Segmentation fault)
    in thread 7f5371c229c0 thread_name:radosgw-admin
    1: (()+0x641852) [0x7f536834a852]
    2: (()+0xf130) [0x7f535e1a6130]
    3: (RGWListBucketIndexesCR::operate()+0x92d) [0x7f536813db5d]
    4: (RGWCoroutinesStack::operate(RGWCoroutinesEnv*)+0x6b) [0x7f536807737b]
    5: (RGWCoroutinesManager::run(std::list<RGWCoroutinesStack*, std::allocator<RGWCoroutinesStack*> >&)+0x414) [0x7f5368079854]
    6: (RGWCoroutinesManager::run(RGWCoroutine*)+0x5d) [0x7f536807a57d]
    7: (RGWRemoteDataLog::run_sync(int)+0xda) [0x7f536812272a]
    8: (main()+0x1d6b5) [0x7f5371c929f5]
    9: (__libc_start_main()+0xf5) [0x7f535d8daaf5]
    10: (()+0x44795) [0x7f5371c99795]
    2017-06-27 10:13:14.906093 7f5371c229c0 -1
    Caught signal (Segmentation fault) *
    in thread 7f5371c229c0 thread_name:radosgw-admin

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20715: jewel: rgw: radosgw-admin data sync run crashResolvedNathan CutlerActions
Copied to rgw - Backport #20716: kraken: rgw: radosgw-admin data sync run crashRejectedActions
Actions #2

Updated by Casey Bodley almost 7 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Casey Bodley
  • Priority changed from Normal to High
Actions #3

Updated by Yehuda Sadeh almost 7 years ago

  • Subject changed from rgw: radosgw-admin data run crash to rgw: radosgw-admin data sync run crash
Actions #4

Updated by Yehuda Sadeh almost 7 years ago

  • Status changed from Fix Under Review to 7
Actions #5

Updated by Casey Bodley almost 7 years ago

  • Status changed from 7 to Pending Backport
  • Backport set to jewel kraken
Actions #6

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20715: jewel: rgw: radosgw-admin data sync run crash added
Actions #7

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20716: kraken: rgw: radosgw-admin data sync run crash added
Actions #8

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF