rgw: fix radosgw-admin data sync run crash

If sync thread have run before, then run data sync init. sync_status is still remain in rados pool. so no matter sync_status exists or not, if state is StateInit, sync_status.sync_info.num_shards should be updated.

Fixes: http://tracker.ceph.com/issues/20423

Signed-off-by: Shasha Lu <lu.shasha@eisoo.com>